# alpaca-trade-api-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/alpaca/: account.rs  account_activity.rs  account_configurations.rs  add_symbol_to_watchlist_request.rs  announcement.rs  asset.rs  asset_class.rs  asset_status.rs  client.rs  clock.rs  create_watchlist_request.rs  dtbp_check.rs  mod.rs  order.rs  order_type.rs  portfolio_history.rs  position.rs  remove_symbol_from_watchlist_request.rs  side.rs  time_in_force.rs  to_snake_case.rs  trade_confirm_email.rs  trade_update.rs  update_watchlist_request.rs
src/alpaca/entities/: account.rs  account_activity.rs  account_configurations.rs  asset.rs  calendar_day.rs  mod.rs  order.rs  portfolio_history.rs  position.rs  watchlist.rs
src/alpaca/enums/: date_type.rs  mod.rs  order_class.rs  order_type.rs  position_intent.rs  side.rs  string_enum.rs  time_frame.rs  time_in_force.rs
src/alpaca/requests/: add_symbol_to_watchlist.rs  close_all_positions.rs  close_position.rs  create_watchlist.rs  get_account_activities.rs  get_announcements.rs  get_assets.rs  get_calendar.rs  get_orders.rs  get_portfolio_history.rs  mod.rs  place_order.rs  remove_symbol_from_watchlist.rs  replace_order.rs  trade_update.rs  update_account_configurations.rs  update_watchlist.rs
src/alpaca/responses/: api_error.rs  close_all_positions.rs  mod.rs
src/alpaca/rest/: account.json  client_v2.rs  http_client.rs  mod.rs
src/alpaca/util/: query.rs
