[package]
name = "alpaca-trade-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.6", features = ["serde", "serde-json"] }
chrono = { version = "0.4.38", features = ["serde"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.10", features = [
    "client",
    "full",
    "http1",
    "http2",
    "tokio",
] }

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.37" }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
urlencoding = "2.1.3"
